--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#home">Home</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#info">Info</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -59,7 +59,7 @@
         </blockquote>
     </section>
     <!-- The First Info -->
-    <section class="info d-flex align-items-center" id="info">
+    <section class="info d-flex align-items-center" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 info-left">
