--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="pt-5">
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">TechScroll</a>
+        <a class="navbar-brand font-weight-bold" href="#">TechScroll</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
